[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/characters.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Slime.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/feedback.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 16, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 16, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 16, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 32, 112, 16, 16 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "moving_down",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "moving_right",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "moving_left",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "moving_up",
"speed": 5.0
} ]

[sub_resource type="Animation" id=14]
resource_name = "appear_animation"
length = 1.5

[sub_resource type="Animation" id=15]
resource_name = "disappear_animation"
length = 1.5

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 6.95776, 8.24934 )

[sub_resource type="CircleShape2D" id=17]
radius = 80.0

[node name="Slime" type="KinematicBody2D"]
script = ExtResource( 2 )
max_speed = 2000

[node name="feedback" parent="." instance=ExtResource( 3 )]
position = Vector2( -15, -15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 30 )
animation = "moving_up"
frame = 1
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 6.3559, 6.37879, 3.54974, 8.20279, -4.44779, 7.92217, -6.4121, 6.5191, -5.00903, -4.98614, -2.34318, -7.37137, 2.98852, -6.95045, 7.05744, 1.88894 )

[node name="change_direction_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appear_animation = SubResource( 14 )
anims/disappear_animation = SubResource( 15 )

[node name="touch_area" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="touch_area"]
shape = SubResource( 16 )

[node name="detection_area" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource( 17 )

[node name="chase_timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="change_direction_timer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="area_entered" from="touch_area" to="." method="_on_touch_area_area_entered"]
[connection signal="area_entered" from="detection_area" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="detection_area" to="." method="_on_detection_area_area_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="chase_timer" to="." method="_on_chase_timer_timeout"]
